[gd_scene load_steps=15 format=3 uid="uid://cejt44jlc47d"]

[ext_resource type="Script" path="res://scenes/level/main_game.gd" id="1_pba15"]
[ext_resource type="PackedScene" uid="uid://cy83828o0jhb4" path="res://Assets/Background/testBackground.tscn" id="2_qrwjx"]
[ext_resource type="Texture2D" uid="uid://bxk4vf7scuu42" path="res://Assets/Images/Others/finishLine.png" id="3_i1v6j"]
[ext_resource type="PackedScene" uid="uid://d3q3o25dcrisy" path="res://scenes/game_elements/beam/beam.tscn" id="4_koegk"]
[ext_resource type="FontFile" uid="uid://ciu34ps6m37b6" path="res://Assets/Fonts/upheavtt.ttf" id="5_3odew"]
[ext_resource type="Texture2D" uid="uid://ry5pgmaujf8q" path="res://Assets/Images/Buttons/GUI.png" id="6_jd1al"]
[ext_resource type="PackedScene" uid="uid://c2ya3gb45pkq8" path="res://scenes/game_elements/platforms/normalPlatform.tscn" id="7_3sfv2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu1am"]
size = Vector2(284.878, 33.4471)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lmhx"]
size = Vector2(4558, 200)

[sub_resource type="Theme" id="Theme_yeqvi"]
default_font_size = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ywlty"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2u7ot"]
texture = ExtResource("6_jd1al")
region_rect = Rect2(145, 113, 46, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s0mtx"]
texture = ExtResource("6_jd1al")
region_rect = Rect2(145, 98, 46, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w5h6t"]
texture = ExtResource("6_jd1al")
region_rect = Rect2(145, 81, 46, 14)

[node name="MainGame" type="Node2D"]
script = ExtResource("1_pba15")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(541, 660)
rotation = 3.14159
scale = Vector2(97.6653, 61.0896)
zoom = Vector2(0.7, 0.7)

[node name="TestBackground" parent="Camera2D" instance=ExtResource("2_qrwjx")]
offset_left = -0.307175
offset_top = 1.17859
offset_right = -0.307175
offset_bottom = 1.17859
scale = Vector2(-0.035, -0.06)

[node name="End" type="Sprite2D" parent="."]
position = Vector2(543.5, -700)
scale = Vector2(4.1, 3.88957)
texture = ExtResource("3_i1v6j")

[node name="End" type="Area2D" parent="End"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="End/End"]
position = Vector2(-1.82924, 0.0273438)
shape = SubResource("RectangleShape2D_wu1am")

[node name="destroy" type="Area2D" parent="."]
position = Vector2(-1800, 984)

[node name="destroy" type="CollisionShape2D" parent="destroy"]
position = Vector2(2269, 90)
shape = SubResource("RectangleShape2D_4lmhx")

[node name="pieces" type="Node2D" parent="."]

[node name="isFalling" type="Node2D" parent="pieces"]

[node name="hasFallen" type="Node2D" parent="pieces"]

[node name="Beam" parent="." instance=ExtResource("4_koegk")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="nextPiecePreview" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 138.0
offset_top = 211.0
offset_right = 178.0
offset_bottom = 251.0

[node name="resetButton" type="Button" parent="CanvasLayer"]
offset_left = 907.0
offset_top = 572.0
offset_right = 1113.0
offset_bottom = 624.0
focus_mode = 0
theme = SubResource("Theme_yeqvi")
theme_override_fonts/font = ExtResource("5_3odew")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ywlty")
theme_override_styles/hover = SubResource("StyleBoxTexture_2u7ot")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s0mtx")
theme_override_styles/normal = SubResource("StyleBoxTexture_w5h6t")
text = "Recommencer"

[node name="nextPiece" type="Label" parent="CanvasLayer"]
offset_left = 22.0
offset_top = 67.0
offset_right = 154.0
offset_bottom = 90.0
text = "Prochaine pi√®ce :"

[node name="gameTime" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
horizontal_alignment = 1

[node name="gameTime" type="Timer" parent="."]
autostart = true

[node name="NormalPlatform" parent="." instance=ExtResource("7_3sfv2")]
position = Vector2(115, 751)
scale = Vector2(2, 4)

[connection signal="area_entered" from="End/End" to="." method="_on_end_area_entered"]
[connection signal="pressed" from="CanvasLayer/resetButton" to="." method="_on_reset_button_pressed"]
